# lzss

./: .gitignore  CMakeLists.txt  README.md  input.txt  lzss.c  main.c  my_lzss.c
java-implement/: pom.xml
java-implement/src/main/java/io/github/blankbro/lzss/: ByteUtil.java  CustomCompressImpl.java  CustomCompressImplSelf.java  Lzss.java  Selfdev.java  TimeUtil.java
java-implement/src/main/java/io/github/blankbro/lzss/util/: ByteUtil.java
java-implement/src/test/java/io/github/blankbro/lzss/: CustomCompressImplSelfTest.java  CustomCompressImplTest.java  LzssTest.java  SelfdevTest.java
lzss-c/reference/: CMakeLists.txt
lzss-c/test/: CMakeLists.txt  byte_tool_test.c  reference_lzss_test.c
lzss-java/: pom.xml
lzss-java/src/main/java/io/github/blankbro/lzss/: CustomCompressImpl.java  CustomCompressImpl2.java  CustomCompressImplSelf.java  Lzss.java
lzss-java/src/main/java/io/github/blankbro/lzss/util/: ByteUtil.java  FileUtil.java  TimeUtil.java
lzss-java/src/test/java/io/github/blankbro/lzss/: BaseTest.java  CustomCompressImpl2Test.java  CustomCompressImplTest.java  LzssTest.java
myimplement/: CMakeLists.txt  byte_tool.c  lzss.c
reference/: lzss.c
test/: CMakeLists.txt  byte_tool_test.c  myimplement_lzss_test.c  reference_lzss_test.c
